--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "__locale": "c",
-        "ios": "c"
+        "ios": "c",
+        "__node_handle": "c"
     }
 }
